somewhat unresonable large commit Added uart for reading boundary,  just debug output now. i2c sensors for internal sensors. basic motorcontrol (not tested, no emargancy stop yet) ROSComms Communication to Raspberry pi via SPI More sensors read. current calculations. LPC1768 is still a no go - need to start looking into that soon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,18 @@
 {
+    "makefile.extensionOutputFolder": "./.vscode",
+    "makefile.configurations": [
+        {
+            "name": "littlekernel",
+            "makeArgs": ["cpu=1788"]
+        }
+    ],
     "files.associations": {
-        "common.h": "c",
-        "timers.h": "c",
-        "lpc177x_8x.h": "c",
-        "lpc177x_8x_hal.h": "c",
-        "system_lpc177x_8x.h": "c",
-        "system_lpc175x_6x.h": "c",
-        "portable.h": "c",
-        "stdio.h": "c"
-    },
-
+        "global.h": "c",
+        "cstdio": "c",
+        "cmath": "c",
+        "*.tcc": "c",
+        "cstdlib": "c",
+        "portmacro.h": "c",
+        "motorctrl.h": "c"
+    }
 }
